@@ -30,13 +30,13 @@ EBUILD netbeans-5.5.1-r1.ebuild 15143 RMD160 6831b0011cca13442216feb0c2f56463ebc
 EBUILD netbeans-6.5-r4.ebuild 39591 RMD160 aeda3cbba875f25e1223bf5ccac8aa937bc910db SHA1 6ca138e59d05bbf9c98fde6d9fb359f4bb2974cf SHA256 faf9d88505cae8d9b098a2501cb36eaf9d7490db5fbc56f1c293778939d1ff66
 EBUILD netbeans-6.7.1.ebuild 42308 RMD160 c6d6c38a9b5f9804498922ffd55d3c22a5933e2f SHA1 258b73c8dcd390423508795af3b597a0202ce3e8 SHA256 c0bf04ee80fdbd8609c326b9b30cb9c367e48424a425e185a2399b4158473f59
 EBUILD netbeans-6.7.ebuild 42096 RMD160 de7bd80262a24cee50bd2ae358efda780c7d307c SHA1 11162c9746d60403ccd62323fbc7a70bf3570c3a SHA256 2c82b6132fa98e3c7c97db37fda432732a46f9aa3253db78f3b9987e50729704
-EBUILD netbeans-6.8-r1.ebuild 43139 RMD160 ec25aad0b80dbf23d16e70fee43051258e51edab SHA1 a666b4830f76be9298a06013b3fe75b57968cd09 SHA256 eda53a34aafa717c85e05e36e4e4f3839a758cfeb038095cb73122c1be69617d
-MISC ChangeLog 24589 RMD160 175278dc3e9b8b2c81c360843419492fb2ae7efa SHA1 765f44a8157240c576593ec7ac74d5ef35b3d6aa SHA256 b0e5148c795dfea0957e0f95b55d043bf3da1fae0db9a483ef5dbfa109f7c6d8
+EBUILD netbeans-6.8-r1.ebuild 43149 RMD160 b7d69590f44f1427b7ebd2f77667c5db6ad93cf1 SHA1 d2749f596994c7cf6143c5bd17bd86de26ec0c3a SHA256 2fc1fcf5e9b21d8b56e0c55746859fdd2c38372c208706e4b18e05af9a01d654
+MISC ChangeLog 24684 RMD160 946ccfcff101013ab49a0289ebd0385acc1a8fc8 SHA1 1801ce235af8eec3067ecd26c7799bc73f1129a0 SHA256 ebe80c5c356cee9bb87200c6f36fd638675bd1207b2bea990bf186e2d4d9492a
 MISC metadata.xml 1301 RMD160 1e12597c731e35626197ed6ff4efc2094aa12e61 SHA1 8b0614fb5db9568c8b489908d62fcafc9b636f84 SHA256 14d98dfb63646fb6bc7d433f9626ffa7801ff1de38535167f9b0528dac0182a9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.13 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAks4xxoACgkQcxLzpIGCsLQsDACfevq8no/53e+boe6f/2BmHktu
-x+kAn19YajyZAHMkIhPNjkLoBeFRbh6v
-=gIRQ
+iEYEARECAAYFAktcvNYACgkQcxLzpIGCsLSWIQCfRjgHV6qncqf4EXis8SvM+yGo
+zvMAnA6+77paJjSQc7M6lwTxUD1vJ/qq
+=vIOe
 -----END PGP SIGNATURE-----
